--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  padding: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+body{
+  background-image: url(./assets/background.jpg);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.container {
+  /* background-color: #fff; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+  width: 100%;
+  max-width: 500px;
+  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.8);
+  border-radius: 10px;
 }
+
+input {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  font-size: 16px;
+  box-sizing: border-box;
+}
+ 
+.weather-container{
+  display: flex ;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  padding: 20px 0;
+  width: 100%;
+}
+
+.weather-container div{
+  width: 50%;
+  padding: 10px;
+  box-sizing: border-box;
+  margin: 10px 0;
+}
+
+div i{
+  font-size: 20px;
+}
+
+.location i{
+  color: rgb(9,11,90);
+}
+.temp i{
+  color: rgb(209, 196, 14);
+}
+.weather i{
+  color: rgb(11,170,243);
+}
+
+.wind i{
+  color: rgb(144, 162, 168);
+}
+.humidity i{
+  color: rgb(11,170,233);
+  margin-left: 4px;
+} 
